General Improvements
- Removed #getConfig and #getMessages from InfractionType
- Improved javadocs
- Improved Config methods
- Use Path#of instead of Paths#get